gateway/gateway_envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: /dev/stdout
          stat_prefix: grpc_json
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  # Below prefix matches the outgoing gRPC route path, not incoming request route path
                  # as the transcoder translates http request route to gRPC route
                  prefix: "/go_service.Greeter"
                  grpc: {}
                route:
                  cluster: go-service
                  timeout:
                    seconds: 60
              - match:
                  # Below prefix matches the outgoing gRPC route path, not incoming request route path
                  # as the transcoder translates http request route to gRPC route
                  prefix: "/dotnet_service.Greeter"
                  grpc: {}
                route:
                  cluster: dotnet-service
                  timeout:
                    seconds: 60

          http_filters:
          - name: envoy.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.transcoder.v2.GrpcJsonTranscoder
              proto_descriptor: "contracts/desc.pb"
              services: ["go_service.Greeter", "dotnet_service.Greeter"]
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: false
          - name: envoy.grpc_web
          - name: envoy.router

  clusters:
  - name: go-service
    connect_timeout: 1.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: go-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: go-service # Map to docker service address
                port_value: 81
  - name: dotnet-service
    connect_timeout: 1.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: dotnet-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dotnet-service # Map to docker service address
                port_value: 82

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
